Added pseudocode and sample queries to index.js, removed most of static content from index.html, adjusted classes on the style.html and index.html

--- a/style.html
+++ b/style.html
@@ -16,8 +16,8 @@
         </header>
         <main role="main" aria-live="polite">
             <!--idea: swap div and section (div is on outside);  that way loads the container once to load data dynamically -->
-            <div class="welcome-page">
-                <section role="region" class="container col-12">
+            <div class="contentContainer col-12">
+                <section role="region" class="welcome-page">
                     <h2>Welcome to the Space View!</h2>
                     <p>Choose to search for Planets, Stars, or Nebulae</p>
                     <div class="search-options">
