--- a/style.html
+++ b/style.html
@@ -37,10 +37,10 @@
                 <section role="region" class="container col-12">
                     <h2>Planet Page</h2>
                     <p>Which Planet do you want to View?</p>
-                    <form class='searchPlanet'>
+                    <form class='search-planet-form'>
                         <div>
                             <label for="planet">Search Planet</label>
-                            <input type="text" id="planet" name="planet" required>
+                            <input type="text" id="planet-input" name="planet" required>
                             <button type="submit">Search</button>
                         </div>
                     </form>
@@ -108,7 +108,7 @@
                     <h2>Star Page</h2>
                     <!-- considering adding radio buttons?  there's a limited number of planets.-->
                     <p>Which Stars do you want to View?</p>
-                    <form class='searchPlanet'>
+                    <form class='search-star-form'>
                         <div>
                             <label for="star">Search Star</label>
                             <input type="text" id="star" name="Star" required>
@@ -150,7 +150,7 @@
                 <section role="region" class="container col-12">
                     <h2>Nebula Page</h2>
                     <p>Which Nebulas do you want to View?</p>
-                    <form class='searchNebulae'>
+                    <form class='search-nebulae-form'>
                         <div>
                             <label for="nebula">Search Nebulae</label>
                             <input type="text" id="nebula" name="Nebula" required>
