Added favicon and link to it in the index.html <head> element

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>SpaceView: Planets, Stars, Nebulae</title>
+        <link rel="shortcut icon" href="favicon.ico"/> 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="style.css" />
         <link rel="stylesheet" type="text/css" href="float-grid.css" />
@@ -20,6 +21,7 @@
         </main>
         <footer role="contentinfo">
             <!--Remember to update this to a link-->
+            <p>Developed by Sarah Burgess</p>
             <p>Powered by Nasa</p>
         </footer>
         <script src="index.js"></script>   
