--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     </head>
     <body>
-        <header role="banner">
+        <header class="css-header" role="banner">
             <h1>Space View: Planets, Stars, Nebulae...</h1>
 
         </header>
