removed header image, removed unnecessary col-12 (which were causing issues with the footer) commented out css for border and background image of header

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         </header>
         <main role="main" aria-live="polite">
-            <div class="contentContainer css-container col-12">
+            <div class="contentContainer css-container">
             </div>
         </main>
         <footer class="css-footer" role="contentinfo">
